5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4358/executions/1596_1571.log
== TEST (2019-04-02 11:50:49) 
-- CODE:
texto:input("Guido van Rossum criou o Python")
	print(texto.upper())

-- ERROR:
File "XXXX", line 2
    print(texto.upper())
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 11:51:04) 
-- CODE:
texto:input("Guido van Rossum criou o Python")
	print(texto.upper())

-- EXECUTION TIME:
0.226318
-- ERROR:
  File "/home/codebench/codes/1596/1571/main.py", line 1
    texto:input()
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 11:51:09) 
-- CODE:
texto:input("Guido van Rossum criou o Python")
	print(texto.upper())

-- EXECUTION TIME:
0.177626
-- ERROR:
  File "/home/codebench/codes/1596/1571/main.py", line 1
    texto:input()
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 11:51:30) 
-- CODE:
texto:("Guido van Rossum criou o Python")
	print(texto.upper())

-- EXECUTION TIME:
0.141592
-- ERROR:
  File "/home/codebench/codes/1596/1571/main.py", line 1
    texto:("Guido van Rossum criou o Python")
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 11:51:47) 
-- CODE:
texto:input("Guido van Rossum criou o Python")
	print(texto.upper())

-- EXECUTION TIME:
0.14332
-- ERROR:
  File "/home/codebench/codes/1596/1571/main.py", line 1
    texto:input()
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 11:52:17) 
-- CODE:
texto:Guido van Rossum criou o Python
	print(texto.upper())

-- EXECUTION TIME:
0.13881
-- ERROR:
  File "/home/codebench/codes/1596/1571/main.py", line 1
    texto:Guido van Rossum criou o Python
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:52:19) 
-- CODE:
texto:Guido van Rossum criou o Python
	print(texto.upper())

-- ERROR:
File "XXXX", line 1
    texto:Guido van Rossum criou o Python
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:54:48) 
-- CODE:
texto=(input("Só sei que nada sei"))
print(texto.upper())

-- OUTPUT:
PRIMEIRO_CASO_DE_TESTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:58:42) 
-- CODE:
texto=(input("So sei que nada sei"))
print(texto.upper())

-- OUTPUT:
PRIMEIRO_CASO_DE_TESTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 11:58:48) 
-- CODE:
texto=(input("So sei que nada sei"))
print(texto.upper())

-- EXECUTION TIME:
0.149816
-- TEST CASE 1:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
PRIMEIRO_CASO_DE_TESTE
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
